add commet section

--- a/index.html
+++ b/index.html
@@ -400,9 +400,167 @@
                         </div>
                     </li>
                 </ul>
+                <a class="products__bottom-btn btn" href="#">View all cars</a>
             </div>
         </section>
         <!-- products section end -->
+
+        <!-- comment -->
+        <section class="comment">
+            <div class="container">
+                <div class="comment__inner">
+                    <div class="comment__left">
+                        <a class="comment__google-link" href="#">
+                            <img src="./images/svg/google.svg" alt="google icon" width="20" height="20">
+                            <span>From Google</span>
+                        </a>
+                        <h2 class="comment__title">Hear what the community is saying</h2>
+                        <hr class="comment__line">
+                        <p class="comment__insta-text">More interesting reviews on Instagram</p>
+                        <a class="comment__btn btn" href="#">
+                            <span>
+                                <span>Instagram</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="comment__right">
+                        <ul class="comment__list">
+                            <li class="comment__item">
+                                <header class="comment__item-header">
+                                    <img src="./images/png/Savannah Nguyen.png" alt="Savannah Nguyen" width="42" height="42">
+                                    <div>
+                                        <h3>Savannah Nguyen</h3>
+                                        <span>savannahnguyen@gmail.com</span>
+                                    </div>
+                                    <img src="./images/svg/google.svg" alt="google icon" width="42" height="42">
+                                </header>
+                                <p class="comment__item-text">Sagittis sed tortor, elementum vitae varius sodales consectetur. Vitae arcu ut morbi bibendum ullamcorper feugiat. Venenatis hendrerit cursus egestas sit ornare nunc vulputate aliquam sapien. Pulvinar nunc consectetur nibh consectetur mollis mauris est mauris amet. Sed hac vehicula id et dui morbi quam pulvinar condimentum. Senectus sed varius interdum nunc, arcu vulputate massa.</p>
+                                <hr class="comment__item-hr">
+                                <div class="comment__item-rating">
+                                    <span>Star rating:</span>
+                                    <div>
+                                        <img src="./images/svg/green-star.svg" alt="green-star" width="20" height="20">
+                                        <img src="./images/svg/green-star.svg" alt="green-star" width="20" height="20">
+                                        <img src="./images/svg/green-star.svg" alt="green-star" width="20" height="20">
+                                        <img src="./images/svg/green-star.svg" alt="green-star" width="20" height="20">
+                                        <img src="./images/svg/green-star.svg" alt="green-star" width="20" height="20">
+                                    </div>
+                                </div>
+                            </li>   
+                            <li class="comment__item">
+                                <header class="comment__item-header">
+                                    <img src="./images/png/Ronald Richards.png" alt="Ronald Richards" width="42" height="42">
+                                    <div>
+                                        <h3>Ronald Richards</h3>
+                                        <span>ronaldrichards@gmail.com</span>
+                                    </div>
+                                    <img src="./images/svg/google.svg" alt="google icon" width="42" height="42">
+                                </header>
+                                <p class="comment__item-text">Sagittis sed tortor, elementum vitae varius sodales consectetur. Vitae arcu ut morbi bibendum ullamcorper feugiat. Venenatis hendrerit cursus egestas sit ornare nunc vulputate aliquam sapien. Pulvinar nunc consectetur nibh consectetur mollis mauris est mauris amet. Sed hac vehicula id et dui morbi quam pulvinar condimentum. Senectus sed varius interdum nunc, arcu vulputate massa.</p>
+                                <hr class="comment__item-hr">
+                                <div class="comment__item-rating">
+                                    <span>Star rating:</span>
+                                    <div>
+                                        <img src="./images/svg/green-star.svg" alt="green-star" width="20" height="20">
+                                        <img src="./images/svg/green-star.svg" alt="green-star" width="20" height="20">
+                                        <img src="./images/svg/green-star.svg" alt="green-star" width="20" height="20">
+                                        <img src="./images/svg/green-star.svg" alt="green-star" width="20" height="20">
+                                        <img src="./images/svg/green-star.svg" alt="green-star" width="20" height="20">
+                                    </div>
+                                </div>
+                            </li>   
+                            <li class="comment__item">
+                                <header class="comment__item-header">
+                                    <img src="./images/png/Savannah Nguyen.png" alt="Savannah Nguyen" width="42" height="42">
+                                    <div>
+                                        <h3>Husniddin Bahromjonov</h3>
+                                        <span>husniddin@gmail.com</span>
+                                    </div>
+                                    <img src="./images/svg/google.svg" alt="google icon" width="42" height="42">
+                                </header>
+                                <p class="comment__item-text">Sagittis sed tortor, elementum vitae varius sodales consectetur. Vitae arcu ut morbi bibendum ullamcorper feugiat. Venenatis hendrerit cursus egestas sit ornare nunc vulputate aliquam sapien. Pulvinar nunc consectetur nibh consectetur mollis mauris est mauris amet. Sed hac vehicula id et dui morbi quam pulvinar condimentum. Senectus sed varius interdum nunc, arcu vulputate massa.</p>
+                                <hr class="comment__item-hr">
+                                <div class="comment__item-rating">
+                                    <span>Star rating:</span>
+                                    <div>
+                                        <img src="./images/svg/green-star.svg" alt="green-star" width="20" height="20">
+                                        <img src="./images/svg/green-star.svg" alt="green-star" width="20" height="20">
+                                        <img src="./images/svg/green-star.svg" alt="green-star" width="20" height="20">
+                                        <img src="./images/svg/green-star.svg" alt="green-star" width="20" height="20">
+                                        <img src="./images/svg/green-star.svg" alt="green-star" width="20" height="20">
+                                    </div>
+                                </div>
+                            </li>   
+                            <li class="comment__item">
+                                <header class="comment__item-header">
+                                    <img src="./images/png/Savannah Nguyen.png" alt="Savannah Nguyen" width="42" height="42">
+                                    <div>
+                                        <h3>Najmiddin Kubro</h3>
+                                        <span>najmiddin@gmail.com</span>
+                                    </div>
+                                    <img src="./images/svg/google.svg" alt="google icon" width="42" height="42">
+                                </header>
+                                <p class="comment__item-text">Sagittis sed tortor, elementum vitae varius sodales consectetur. Vitae arcu ut morbi bibendum ullamcorper feugiat. Venenatis hendrerit cursus egestas sit ornare nunc vulputate aliquam sapien. Pulvinar nunc consectetur nibh consectetur mollis mauris est mauris amet. Sed hac vehicula id et dui morbi quam pulvinar condimentum. Senectus sed varius interdum nunc, arcu vulputate massa.</p>
+                                <hr class="comment__item-hr">
+                                <div class="comment__item-rating">
+                                    <span>Star rating:</span>
+                                    <div>
+                                        <img src="./images/svg/green-star.svg" alt="green-star" width="20" height="20">
+                                        <img src="./images/svg/green-star.svg" alt="green-star" width="20" height="20">
+                                        <img src="./images/svg/green-star.svg" alt="green-star" width="20" height="20">
+                                        <img src="./images/svg/green-star.svg" alt="green-star" width="20" height="20">
+                                        <img src="./images/svg/green-star.svg" alt="green-star" width="20" height="20">
+                                    </div>
+                                </div>
+                            </li>   
+                        </ul>
+
+                        <div class="comment__right-carousel">
+                            <div class="comment__right-carousel-scroll">
+                                <span id="comment-carousel"></span>
+                            </div>
+                            <div class="comment__right-carousel-btns">
+                                <button type="button">
+                                    <img src="./images/svg/arrow.svg" alt="arrow icon" width="20" height="20">
+                                </button>
+                                <button type="button">
+                                    <img style="transform: rotate(180deg);" src="./images/svg/arrow.svg" alt="arrow icon" width="20" height="20">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- comment end -->
+
+        <!-- brands -->
+        <section class="brands">
+            <div class="container">
+                <h2 class="brands__title">More than 50 brands of cars</h2>
+                <ul class="brands__list">
+                    <li class="brands__item">
+                        <img src="./images/svg/ford.svg" alt="ford icon" width="140" height="40">
+                    </li>
+                    <li class="brands__item">
+                        <img src="./images/svg/nissan.svg" alt="ford icon" width="140" height="40">
+                    </li>
+                    <li class="brands__item">
+                        <img src="./images/svg/toyota.svg" alt="ford icon" width="140" height="40">
+                    </li>
+                    <li class="brands__item">
+                        <img src="./images/svg/dodge.svg" alt="ford icon" width="140" height="40">
+                    </li>
+                    <li class="brands__item">
+                        <img src="./images/svg/hyundai.svg" alt="ford icon" width="140" height="40">
+                    </li>
+                    <li class="brands__item">
+                        <img src="./images/svg/jeep.svg" alt="ford icon" width="140" height="40">
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!-- brands end -->
 
     </main>
     <!-- main end -->
